fixed z-index header, add font-awsome

--- a/app/scss/source/_variables.scss
+++ b/app/scss/source/_variables.scss
@@ -1,9 +1,13 @@
-$grey-50: #FAFAFA;
-$grey-100: #F5F5F5;
-$grey-200: #EEEEEE;
-$grey-300: #E0E0E0;
-$grey-400: #BDBDBD;
-$grey-600: #757575;
-$grey-800: #2f323a;
+$grey-300: #d8d8d8;
+$grey-400: #b9b9b9;
+$grey-600: #666666;
+$grey-700: #575a5f;
 $grey-900: #1e2025;
+$blue-grey: #f5f5fa;
 $light-blue-grey: #bfd0e1;
+$blue-grey-200: #c0c8d1;
+$blue-grey-400: #c0c4c9;
+$blue-grey-700: #3c454c;
+$blue-grey-800: #2f323a;
+$blue: #5c9df5;
+$border: #e7e7ed;
